# startwx-project

cmake/: .gitignore
make/: Makefile
src/: Application.cpp  Application.hpp  CMakeLists.txt  DialogA.cpp  DialogA.hpp  Frame.cpp  Frame.hpp  PanelB.cpp  PanelB.hpp  PanelC.cpp  PanelC.hpp  abc.hpp  test.cpp
